# litehybrid

./: .gitignore  AGENTS.md  Cargo.toml  README.md  rustfmt.toml
crates/litehybrid-core/: Cargo.toml
crates/litehybrid-core/src/: index.rs  lib.rs
crates/litehybrid-ext/: Cargo.toml
crates/litehybrid-ext/src/: lib.rs  scalar.rs  vtab.rs
crates/litehybrid-text/: Cargo.toml
crates/litehybrid-text/src/: lib.rs
crates/litehybrid-vec/: Cargo.toml
crates/litehybrid-vec/src/: lib.rs  metrics.rs  serialize.rs  types.rs
crates/litehybrid-vec/src/index/: flat.rs  mod.rs  topk.rs
doc/: phase.md
